  - Models can now be observed for changes.

* A bug in the ModelRegistry was fixed.
  - Adding of Models should now handle NullPointerExceptions correctly.
 
* A bug in the UML2 Meta-Model was fixed.
  - If the top-level package is a UML model or profile directory, 
    these packages are now adapted correctly.
    
* The Java Meta-Model has been modified.
  - Java models can now refer to JAR archives if explicitly defined in a .javamodel File.

* Some bugs in the basis model instance elements were fixed.
  - Illegal arguments are now handled appropriately.
  - JavaModelInstanceCollections can now be initialized with null 
    values even if they are of the type Set or OrderedSet.

* Some bugs in the Ecore ModelInstance Type were fixed.
  - Empty model instances now get a created default name.
  - Illegal arguments are now handled appropriately.
  - Types are now resolved, even if their package name is not modeled completely
    in the Model.

* Some bugs in the Java ModelInstance Type were fixed.
  - Empty model instances now get a created default name.
  - Illegal arguments are now handled appropriately.
  - The copy mechanism for @pre values works now correctly when invoking
    empty constructors.
  - The return type of operations and properties is now adapted correctly if the type of the operation
    or property is a super type of the result's type.
  
* Some bugs in the OCL2 Parser were fixed.
  - The Parser now implements the IOclParser interface.
  - If the parsing process fails, no constraints or defined features will be added to the model anymore.
  - The special operations OclAny.oclAsType(), oclIsKindOf(), ... can now contain Property- 
    and OperationCallExpressions instead of simple TypeLiteralExpressions.
  - Collection(T1).product(Collection(T2)) is now parsed appropriately.
    
* Some bugs in the OCL2 Interpreter were fixed.
  - Boolean operations and, or, implies are now only interpreted partly if necessary.